update meta tag ang imaegs

--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,24 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Alden Calatrava - Professional Web Developer specializing in WordPress and Angular development. Creating modern, responsive websites with custom plugins, SEO optimization, and web performance tuning.">
-  <meta name="keywords" content="Web Developer, WordPress Developer, Angular Developer, PHP, JavaScript, TypeScript, SEO, Web Performance, Custom Plugins, Responsive Design, Philippines">
+  <meta name="description" content="Alden Calatrava - Web App Developer & WordPress Specialist . I build modern, responsive websites using Angular, Laravel, and WordPress, delivering seamless user experiences across devices. I specialize in custom plugin development, third-party API integrations, SEO Basic, and web performance enhancements to help businesses establish a strong, scalable online presence.">
+  <meta name="keywords" content="Web App Developer, WordPress Developer, Angular Developer, PHP, JavaScript, TypeScript, SEO Basic, Web Performance, Custom Plugins, Responsive Design, Laravel, Docker, Philippines">
   <meta name="author" content="Alden Calatrava">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Alden Calatrava - Web Developer | WordPress & Angular Specialist">
-  <meta property="og:description" content="Professional Web Developer creating modern, responsive websites with WordPress and Angular. Specializing in custom development, SEO optimization, and web performance.">
+  <meta property="og:title" content="Alden Calatrava - Web App Developer | WordPress & Angular Specialist">
+  <meta property="og:description" content="Web App Developer & WordPress Specialist. I build modern, responsive websites using Angular, Laravel, and WordPress, delivering seamless user experiences across devices. I specialize in custom plugin development, third-party API integrations, SEO Basic, and web performance enhancements to help businesses establish a strong, scalable online presence.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://aldencalatrava.com">
-  <meta property="og:image" content="https://aldencalatrava.com/assets/alden-og-image.jpg">
+  <meta property="og:url" content="https://devd3nz.github.io/denz-dev">
+  <meta property="og:image" content="https://devd3nz.github.io/denz-dev/assets/profile.jpg">
   <meta property="og:locale" content="en_US">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Alden Calatrava - Web Developer">
   <meta name="twitter:description" content="Professional Web Developer specializing in WordPress and Angular development">
-  <meta name="twitter:image" content="https://aldencalatrava.com/assets/alden-twitter-card.jpg">
+  <meta name="twitter:image" content="https://devd3nz.github.io/denz-dev/assets/profile.jpg">
   
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,9 +46,9 @@
     "name": "Alden Calatrava",
     "jobTitle": "Web Developer",
     "description": "Professional Web Developer specializing in WordPress and Angular development",
-    "url": "https://aldencalatrava.com",
-    "email": "calatravaalden@gmail.com",
-    "telephone": "+639123456789",
+    "url": "https://devd3nz.github.io/denz-dev",
+    "email": "denz.devtest@gmail.com",
+    "telephone": "+639764449562",
     "address": {
       "@type": "PostalAddress",
       "addressCountry": "Philippines"
@@ -62,8 +62,8 @@
       "Responsive Web Design"
     ],
     "sameAs": [
-      "https://linkedin.com/in/alden-calatrava",
-      "https://github.com/alden-calatrava"
+      "https://linkedin.com/in/d3nzofficials",
+      "https://github.com/DevD3nz"
     ]
   }
   </script>
